# Bitcoin-node

./: .gitignore  Cargo.toml  README.md  nodo.conf
src/: account.rs  address_decoder.rs  blockchain.rs  compact_size_uint.rs  config.rs  custom_errors.rs  handshake.rs  lib.rs  main.rs  network.rs  node.rs  node_data_pointers.rs  server.rs  terminal_ui.rs  utxo_tuple.rs  wallet.rs  wallet_event.rs
src/blockchain_download/: blocks_download.rs  headers_download.rs  mod.rs  utils.rs
src/blocks/: block.rs  block_header.rs  merkle_tree.rs  mod.rs  utils_block.rs
src/gtk/: callbacks.rs  mod.rs  ui_events.rs  ui_functions.rs  ui_gtk.rs
src/gtk/resources/: interfaz.glade  styles.css
src/handler/: message_handlers.rs  mod.rs  node_message_handler.rs
src/logwriter/: log_writer.rs  mod.rs
src/messages/: block_message.rs  get_data_message.rs  getheaders_message.rs  headers_message.rs  inventory.rs  message_header.rs  mod.rs  notfound_message.rs  version_message.rs
src/messages/payload/: get_data_payload.rs  getheaders_payload.rs  mod.rs  version_payload.rs
src/transactions/: mod.rs  outpoint.rs  transaction.rs  tx_in.rs  tx_out.rs
src/transactions/script/: mod.rs  p2pkh_script.rs  pubkey.rs  script_opcodes.rs  sig_script.rs
tests/: block_test.rs
