[package]
name = "bitcoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin_hashes = "0.12.0"
rand = "0.8.5"
chrono = "0.4"
k256 = "0.13.1"
secp256k1 = "0.27.0"
bs58 = "0.5.0"
gtk = { git = "https://github.com/gtk-rs/gtk3-rs.git" }
